--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   ],
   "scripts": {
     "start": "bun run src/index.ts",
-    "build": "bun build src/index.ts --outdir=dist && cp src/package.json dist/ && cp src/README.md dist/",
-    "prepublishOnly": "npm run build"
+    "build": "rm -rf dist && bun build src/index.ts --target=node --outdir=dist && tsc && cp dist/index.js dist/index.mjs && cp src/package.json dist/ && cp src/README.md dist/",
+    "prepublishOnly": "bun run build"
   },
   "repository": {
     "type": "git",
@@ -26,12 +26,16 @@
   "homepage": "https://github.com/alexy-os/bun-lmdb-connector#readme",
   "dependencies": {
     "@elysiajs/cors": "^1.1.1",
-    "elysia": "latest",
-    "lmdb": "latest",
-    "ws": "latest"
+    "ws": "^8.11.0",
+    "elysia": "^1.1.17",
+    "lmdb": "^3.1.3"
   },
   "devDependencies": {
-    "bun-types": "latest"
+    "bun-types": "^1.0.13",
+    "typescript": "^5.0.0"
+  },
+  "peerDependencies": {
+    "bun-types": "^1.0.13"
   },
   "publishConfig": {
     "access": "public"
