--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bun-lmdb-connector",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Library for working with LMDB in Bun",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -11,7 +11,9 @@
   "scripts": {
     "start": "bun run src/index.ts",
     "build": "rm -rf dist && bun build src/index.ts --target=node --outdir=dist && tsc && cp dist/index.js dist/index.mjs && cp src/package.json dist/ && cp src/README.md dist/",
-    "prepublishOnly": "bun run build"
+    "prepublishOnly": "bun run build",
+    "version": "npm run build && git add -A dist",
+    "postversion": "git push && git push --tags && git checkout dist && git merge main && git push origin dist"
   },
   "repository": {
     "type": "git",
