--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bun-lmdb-connector",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Library for working with LMDB in Bun",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -19,7 +19,11 @@
     "type": "git",
     "url": "git+https://github.com/alexy-os/bun-lmdb-connector.git"
   },
-  "keywords": ["bun", "lmdb", "connector"],
+  "keywords": [
+    "bun",
+    "lmdb",
+    "connector"
+  ],
   "author": "Alexy Os",
   "license": "MIT",
   "bugs": {
